--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -1,22 +1,38 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
+  display: grid;
+  height: 100vh;
+  grid-template: auto 1fr auto / auto 1fr auto;
 }
-header,main, aside, footer {
-    background-color: #333;
-    border: 1px solid black;
-    color: white;
-    text-align: center;
-    padding: 1em 0;
+
+header {
+  background: lightpink;
+  padding: 2rem;
+  grid-column: 1 / 4;
 }
-nav ul{
-    background-color: #444;
-    list-style-type: none;
-    color: white;
-    padding: 0.5em 0;
+
+.left-sidebar {
+  background: lightblue;
+  grid-column: 1 / 2;
 }
-nav a {
-    text-decoration: none;
-    color: #0077cc;
+
+main {
+  background: coral;
+  grid-column: 2 / 3;
+}
+
+.right-sidebar {
+  background: yellow;
+  grid-column: 3 / 4;
+}
+
+footer {
+  background: wheat;
+  padding: 2rem;
+  text-align: center;
+  grid-column: 1 / 4;
+}
+
+.left-sidebar,
+.right-sidebar {
+  padding: 1rem;
 }
