--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -36,11 +36,11 @@ nav a {
 
 main {
   text-align: center;
-  text-size-adjust: 100%;  
-  background: #a32464;
+  background: #aa3871;
   grid-column: 2 / 3;
   font-family: 'Montserrat', sans-serif;
   text-shadow: #000 1px 1px 2px;
+  padding: 1rem;
 }
 
 .right-sidebar {
