--- a/styles/base.css
+++ b/styles/base.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: 'Noto Sans', sans-serif;
-  line-height: 1.;
+  line-height: 1.6;
   background-color: #f0f0f5;
   color: #333;
   padding: 5rem;
