--- a/styles/base.css
+++ b/styles/base.css
@@ -74,7 +74,7 @@ main {
   border: 1px solid #ccc;
   border-radius: 25px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
-  flex-direction: column 2,3;
+  flex-direction: column;
 }
 
 .card h2 {
@@ -145,7 +145,6 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  display: center;
 
 }
 
