--- a/styles/base.css
+++ b/styles/base.css
@@ -12,15 +12,18 @@ body {
   background-color: #f0f0f5;
   color: #333;
   padding: 5rem;
+  margin: 0;
 }
 
 header {
   background-color: #1a486d;
   color: white;
   padding: 1rem 0;
+  padding-bottom: 0;
   font-weight: 200;
-  font-size: .75rem;
+  font-size: .50rem;
   text-align: center;
+  margin-bottom: 1.5rem;
   
 }
 
@@ -30,16 +33,16 @@ header span.highlight {
 
 nav {
   background-color: #2c2c2c;
-  padding: 0.75rem 0;
+  padding: 0.50rem 0;
   font-weight: 500;
   font-size: 1rem;
-  margin-bottom: 1.5rem;
+  margin: ;
 }
 
 nav ul {
   display: flex;
   justify-content: center;
-  gap: 3rem;
+  gap: 9rem;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -48,7 +51,7 @@ nav ul {
 nav ul li a {
   color: white;
   text-decoration: none;
-  padding: 0.5rem;
+  padding: 0.rem;
   border-radius: 5px;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
@@ -198,4 +201,29 @@ footer .highlight {
   .card.left img {
     margin-top: 1rem;
   }
+}
+.header-container {
+  background-color: #1f4b6e; 
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+.header-text {
+  text-align: center;
+  padding: 1rem;
+}
+.title-row {
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  gap: .2rem; 
+}
+
+.title-row span,
+.title-row h1 {
+  margin: 0;
+  padding: 0;
+  white-space: nowrap; 
+  font-size: 1rem;
 }
