--- a/styles/base.css
+++ b/styles/base.css
@@ -32,7 +32,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 1rem 0;
+  padding: 1rem 0 0;
 }
 
 .header-text {
@@ -93,7 +93,7 @@ nav ul {
   gap: 10rem;
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0;;
   flex-wrap: wrap;
 }
 
@@ -150,7 +150,7 @@ main {
   color: #1a486d;
   font-weight: 600;
   font-size: 1.5rem;
-  margin-top: 0.5rem;
+  margin-top: 5rem;
   text-align: center;
 }
 
@@ -164,6 +164,7 @@ main {
 }
 
 .card.left .card-text {
+  margin-bottom: 0rem;
   flex: 1;
   text-align: left;
 }
@@ -220,6 +221,7 @@ main {
   color: #1a5276;
   font-weight: bold;
   margin-bottom: 2rem;
+  
 }
 
 .fancy-underline::after {
@@ -230,6 +232,7 @@ main {
   bottom: -0.375rem;
   height: 0.125rem;
   background-color: #1a5276;
+  
 }
 
 /* ===========================
@@ -273,15 +276,11 @@ footer {
   font-weight: 500;
 }
 
-footer .highlight {
-  color: #d4ff00;
-}
 
 #lastModified {
   font-weight: normal;
   font-size: 0.8rem;
-  color: #ffd700;
-  margin-top: 0.25rem;
+   margin-top: 0.25rem;
 }
 
 /* ===========================
