--- a/styles/temples.css
+++ b/styles/temples.css
@@ -19,13 +19,13 @@ body {
 header {
   background-color: #004080;
   color: white;
-  padding: 1rem;
+  padding: 1.5rem;
   position: relative;
 }
 
 header h1 {
   font-family: 'Playfair Display', serif;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   text-align: center;
 }
 
@@ -53,8 +53,9 @@ nav {
 
 nav a {
   color: white;
+  font-size: 2rem;
   text-decoration: none;
-  padding: 0.5rem 1rem;
+  padding: .5rem 1rem;
   border-radius: 4px;
   transition: background-color 0.3s ease;
 }
