--- a/styles/place.css
+++ b/styles/place.css
@@ -19,6 +19,7 @@
 }
 
 body {
+  font-family: var(--font-family);
   background-color: var(--bg-color);
   color: var(--text-color);
   line-height: 1.6;
