--- a/styles/place.css
+++ b/styles/place.css
@@ -128,9 +128,11 @@ footer {
 
 .hero-container img {
   width: 100%;
-  height: auto;
+  height: 70vh;
+  object-fit: cover;
   display: block;
 }
+
 
 /* Shared styles for both boxes */
 .hero-box {
