--- a/styles/place.css
+++ b/styles/place.css
@@ -2,8 +2,8 @@
    Global Variables
 ========================== */
 :root {
-  --primary-color: #be0300;   /* Red */
-  --secondary-color: #009708; /* Green */  
+  --primary-color: #8c0000;   /* Red */
+  --secondary-color: #004F00; /* Green */  
   --neutral-color: #ffffff;   /* White */
   --text-color: #222;
   --bg-color: #f9f9f9;
@@ -22,12 +22,18 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+  overflow-x: hidden;
+}
+
 body {
   font-family: var(--font-family);
   background-color: var(--bg-color);
   color: var(--text-color);
   line-height: 1.6;
-  padding: 0 var(--gap);
+  padding: 0;
+  margin: 0;
 }
 
 /* ==========================
@@ -36,7 +42,7 @@ body {
 header {
   background-color: var(--primary-color);
   color: var(--neutral-color);
-  padding: 1rem var(--gap);
+  padding: 1rem var(--gap); 
   text-align: center;
 }
 
@@ -51,7 +57,7 @@ header h1 {
   width: 100%;
   height: auto;
   display: block;
-  margin-top: 1rem;
+  margin-top: 0;
 }
 
 /* ==========================
@@ -80,7 +86,7 @@ section {
 .weather h2 {
   color: var(--secondary-color);
   font-size: 2rem;
-  font-weight: bold;;
+  font-weight: bold;
   position: relative;
   letter-spacing: 1px;
 }
@@ -124,15 +130,18 @@ footer {
 ========================== */
 .hero-container {
   position: relative;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh
+  margin: 0;  
 }
 
 .hero-container img {
   width: 100%;
-  height: 70vh;
+  height: 100%; /* fill container height */
   object-fit: cover;
   display: block;
 }
-
 
 /* Shared styles for both boxes */
 .hero-box {
@@ -148,14 +157,15 @@ footer {
 
 /* Data box (top-left) */
 .data-box {
-  top: 1.5rem;
+  top: 5rem;
   left: 2rem;
 }
 
 /* Weather box (bottom-right) */
 .weather-box {
   bottom: 1.5rem;
-  right: 2rem;
+  right: 3rem;
+  padding-right: 1rem;
 }
 
 /* Optional styling */
@@ -192,5 +202,4 @@ footer {
     margin-top: 1rem;
     max-width: 90%;
     width: 100%;
-  }
-}
+  }}
