--- a/styles/place.css
+++ b/styles/place.css
@@ -132,7 +132,7 @@ footer {
   position: relative;
   overflow: hidden;
   width: 100vw;
-  height: 100vh
+  height: 100vh;
   margin: 0;  
 }
 
@@ -195,11 +195,11 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
+  }}
 
   .hero-box {
     position: static; /* Remove absolute positioning */
     margin-top: 1rem;
     max-width: 90%;
     width: 100%;
-  }}
+  }
