--- a/styles/place.css
+++ b/styles/place.css
@@ -195,6 +195,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 4rem;
   }
 
   .hero-box {
